直播功能，首页模块修改

--- a/modules/home.html
+++ b/modules/home.html
@@ -48,7 +48,7 @@
 				<div class="modules">
 					<section push='more.list'>
 						<p style="color: #333333;" class="module_title">直播专场</p>
-						<p style="color: #999999;font-size: 12px;">精品回流，趣味无穷</p>
+						<p style="color: #999999;font-size: 12px;">现场直播，趣味无穷</p>
 						<div class="module_img"></div>
 					</section>
 					<section v-click="{method: m_push_url, args : 'user.middl.man'}">
