--- a/modules/timer.shop.html
+++ b/modules/timer.shop.html
@@ -15,7 +15,7 @@
         <sep-scroll>
             <div class="top">
                 <i class="tenant-list"></i>
-                <i class="tenant-entry"></i>
+                <i class="tenant-entry" push="seller.add"></i>
             </div>
             <div class="timer-goods">
                 <div class="content">
